--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,13 +33,12 @@
       {
         "name": "SmartShoot",
         "location": "San Francisco",
-        "title": "Software Developer Junior",
+        "title": "Software Developer Junior in an English-speaking team",
         "date_start": "2017-07",
         "date_end": "2017-12",
         "description": [
-          "SmartShoot is USA leader in connecting professional photographers with major clients such as UberEats and Airbnb",
-          "In Agile teams, development of web applications in Vue.js / Python with the Pyramid framework. Development of a unitary and functional test environment for the platform",
-          "6 months of second year internship in an English-speaking team."
+          "SmartShoot is a californian company, leader in connecting professional photographers with major clients such as UberEats and Airbnb.",
+          "In an Agile team, I developed web applications in Vue.js / Python with the Pyramid framework. I worked also on developing an unitary and functional test environment for Smartshoot platform."
         ],
         "technologies": [
           "Python3",
@@ -63,9 +62,9 @@
         "date_end": "2021-02",
         "duration": 18,
         "description": [
-          "Part-time assistant for the follow-up of the first, second and third students during my studies",
-          "Supervision of students, project corrections, coaching of students teams.",
-          "These missions within the school allowed me to follow 3 trainings which are validated by a certification (Teaching & Coaching)."
+          "Part-time assistant for the follow-up of junior students.",
+          "My job was to supervise students, correct their personal projects, and coach project teams.",
+          "To achieve this mission, I had the opportunity to follow 3 trainings, validated by a certification (Teaching & Coaching)."
         ],
         "technologies": [
           "C",
@@ -80,13 +79,13 @@
       {
         "name": "ForCity",
         "location": "Lyon",
-        "title": "Modeling Python Developer",
+        "title": "Modeling Python Developer in an \"Agile\" team",
         "date_start": "2019-04",
         "date_end": "2019-08",
         "description": [
-          "ForCity is a French start-up, which provides modeling and simulation tools to optimize the resources of the territory (heating, waste, ...)",
-          "Python developer in the waste management modeling team of the metropolis of Lyon",
-          "Interaction in modeling and cartographic management tools in an \"Agile\" team of 6 people."
+          "ForCity is a French start-up, providing modeling and simulation tools to optimize the cities' resources: Heating, Waste, ...",
+          "As a Python developer, I took part in the waste management modeling team for the metropole of Lyon.",
+          "I worked on interaction in modeling and cartographic management tools."
         ],
         "technologies": [
           "Python3",
@@ -101,13 +100,13 @@
       {
         "name": "Valraiso",
         "location": "Lyon",
-        "title": "AI Research Assistant",
+        "title": "AI Research Assistant & React developer",
         "date_start": "2020-04",
         "date_end": "2020-09",
         "description": [
-          "Valraiso is an e-commerce engineering company in the field of mountain tourism",
-          "In the R&D department, implementation of clustering techniques and machine learning for a marqueting application for the choice of a ski trip",
-          "Development of a React / Node.js. application."
+          "Valraiso is an e-commerce engineering company, working in the field of mountain tourism.",
+          "I worked as an AI engineer in the R&D department. I implemented clustering and Machine Learning techniques for a marketing application.",
+          "Then I developed this application, helping clients to choose a ski trip, in React / Node.js."
         ],
         "technologies": [
           "Python3",
@@ -130,9 +129,9 @@
         "date_start": "2016-09",
         "date_end": "2021-08",
         "description": [
-          "Epitech is a 5 year training course for IT expertise and innovation",
-          "Epitech is characterized by an active, inductive and project-based pedagogy",
-          "The work in permanent groups allows the development of values of solidarity, communication and autonomy."
+          "Epitech is an engineering school for IT expertise and innovation. The program lasts 5 years.",
+          "The pedagogy is active, inductive and project-based.",
+          "The team work develops values of solidarity, communication and autonomy."
         ],
         "technologies": [
           "C",
@@ -152,7 +151,9 @@
         "title": "Teaching & Coaching Diploma",
         "date_start": "2017-07",
         "date_end": "2021-02",
-        "description": ["Educational / pedagogical technology"],
+        "description": [
+          "I followed three weeks of training with specialists in education and pedagogy, along with a 18 months internship at Epitech."
+        ],
         "technologies": []
       },
       {
@@ -163,7 +164,7 @@
         "date_end": "2020-08",
         "description": [
           "Accademic training in English in the fields of AI, Big Data, Graphics Computation",
-          "Writing of a 5 month master thesis on the subject of \"Emails Classification using Natural Language Processing and Classification Techniques\"."
+          "The subject of my master thesis was: \"Emails Classification using Natural Language Processing and Classification Techniques\"."
         ],
         "technologies": [
           "Python3",
@@ -181,8 +182,8 @@
           "name": "MarioScene",
           "title": "OpenGL scene in CPP with Mario Bros. theme",
           "description": [
-            "First project in OpenGL to get acquainted with the technology. The goal was to display different 3D models with lighting effects and animations",
-            "For this project I was inspired by the models of Mario Bros. (made with Maya Autodesk) "
+            "This school project was my first in OpenGL and its purpose was to get acquainted with the technology. The goal was to display different 3D models with lighting effects and animations",
+            "I was inspired by the models of Mario Bros. (made with Maya Autodesk) "
           ],
           "link": "https://github.com/Faroito/MarioScene",
           "gif": "/project-background/marioscene.gif",
@@ -197,8 +198,8 @@
         "name": "A-MAZing",
         "title": "OpenGL project with physic simulation, boids and pathfinding.",
         "description": [
-          "School project for Computer Graphics class at Heriot Watt.",
-          "We had to implement multiple component: particule explosion, rigid body physics, crowd or flocking and A* search."
+          "This school project was part of my Computer Graphics class at Heriot Watt.",
+          "We had to implement multiple components: particule explosion, rigid body physics, crowd and A* search."
         ],
         "link": "https://github.com/Faroito/aMAZing",
         "gif": "/project-background/amazing.gif",
@@ -212,8 +213,8 @@
         "name": "Paperfly",
         "title": "Boids model simulated with Vulkan API.",
         "description": [
-          "Small project to discover the Vulkan API",
-          "It's an implementation of the Boids (swarm of birds simulation) represented with paper airplanes."
+          "The aim of this small project was to discover the Vulkan API.",
+          "I implemented the Boids model (swarm of birds simulation) represented with paper airplanes."
         ],
         "link": "https://github.com/Faroito/Paperfly",
         "gif": "/project-background/paperfly.gif",
