Add qr code + conan icon

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -139,6 +139,7 @@
           "C++",
           "SFML",
           "CMake",
+          "Conan",
           "Python3",
           "Haskell",
           "Bash",
