--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -138,6 +138,7 @@
           "C++",
           "SFML",
           "CMake",
+          "Conan",
           "Python3",
           "Haskell",
           "Bash",
