--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,7 +4,7 @@
     "years": "years old",
     "location": "Lyon, France",
     "subtitle": "Looking for a 6 month internship",
-    "description": "Interested in artificial intelligence and machine learning, I’m looking for an internship where I can contribute with my skills in C, C++, Python and Javascript (Vue.Js, React)."
+    "description": "Interested in computer graphics, artificial intelligence and video games development. I’m looking for an internship where I can contribute with my skills in C, C++, Python and Javascript (Vue.Js, React)."
   },
 
   "body": {
