--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -3,8 +3,8 @@
     "title": "Ingénieur en développement",
     "years": "ans",
     "location": "Lyon, France",
-    "subtitle": "Looking for a 6 month internship",
-    "description": "Interested in artificial intelligence and machine learning, I’m looking for an internship where I can contribute with my skills in C, C++, Python and Javascript (Vue.Js, React)."
+    "subtitle": "Recherche d'un stage de 6 mois",
+    "description": "Je suis intéressé par l'intelligence artificielle, le computer graphics et le dévelopement de jeux vidéo. Je recherche un stage où je peux apporter ma contribution grâce à mes compétences en C, C++, Python et Javascript (Vue.Js, React)."
   },
 
   "body": {
