--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,8 +10,8 @@
   "body": {
     "experiences": "Experiences",
     "education": "Education",
-    "projects": "Personnal Projects",
-    "projects_button": "See Personnal Projects"
+    "projects": "Personal Projects",
+    "projects_button": "See Personal Projects"
   },
 
   "footer": {
