Add google analytics

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -165,7 +165,7 @@
         "date_start": "2019-09",
         "date_end": "2020-08",
         "description": [
-          "Dans le cadre de ce Master 2, j'ai suivi une formation accadémique en anglais dans les domaines d'IA, Big Data, Graphics Computation.",
+          "Dans le cadre de ce Master 2, j'ai suivi une formation académique en anglais dans les domaines d'IA, Big Data, Graphics Computation.",
           "Le sujet de ma thèse de Master (travaux de recherche pendant 5 mois) est \"Emails Classification using Natural Language Processing and Classification Techniques\"."
         ],
         "technologies": [
