--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,7 +4,7 @@
     "years": "ans",
     "location": "Lyon, France",
     "subtitle": "Recherche d'un stage de 6 mois",
-    "description": "Je suis intéressé par l'intelligence artificielle, le computer graphics et le dévelopement de jeux vidéo. Je recherche un stage où je peux apporter ma contribution grâce à mes compétences en C, C++, Python et Javascript (Vue.Js, React)."
+    "description": "Je suis intéressé par le computer graphics (visualisation) et l'intelligence artificielle. Je recherche un stage où je peux apporter ma contribution grâce à mes compétences en C, C++, Python et Javascript (Vue.Js, React)."
   },
 
   "body": {
